--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,20 +1,3 @@
-*,
-ol,
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-style: normal;
-  font-family: "Kanit";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 0.44px;
-  list-style-type: none;
-  text-decoration: none;
-}
 .footer {
   background: #3c4242;
 }
@@ -44,6 +27,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: start;
+  padding: 0;
 }
 .footer-info__block__items li {
   color: #f6f6f6;
@@ -77,6 +61,9 @@ li {
   justify-content: center;
   align-items: center;
   gap: 2%;
+}
+.footer__block_second__download__btn {
+  border-radius: 20px;
 }
 .footer__block_second__download__btn {
   cursor: pointer;
