--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-* {
+*,
+ol,
+ul,
+li {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-style: normal;
+  font-family: "Kanit";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.44px;
+  list-style-type: none;
+  text-decoration: none;
 }
