--- a/src/components/home/MenCategories/MenCategories.css
+++ b/src/components/home/MenCategories/MenCategories.css
@@ -5,6 +5,7 @@
 .menctgrs__header {
   border-left: 10px solid #8a33fd;
   padding-left: 2%;
+  margin-top: 6%;
   margin-bottom: 6%;
   color: #3c4242;
   font-size: 2.1rem;
@@ -30,9 +31,10 @@
   align-items: center;
 }
 .menctgrs__title {
+  padding-top: 2%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: space-between;
 }
 .menctgrs__title__header {
