--- a/src/components/home/brandsBlock/Brands.css
+++ b/src/components/home/brandsBlock/Brands.css
@@ -4,8 +4,11 @@
   border-radius: 12px;
   border: 1.069px solid var(--Dark-Grey---Fashion, #323232);
   background: #3c4242;
+  margin-bottom: 3%;
+  margin-top: 3%;
 }
 .brands__block {
+  margin-top: 1%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,11 +31,13 @@
   color: #fbd103;
   font-weight: 700;
 }
-.brands__img {
+.brands__img-block {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5%;
+  gap: 3%;
+  margin-top: 2%;
+  margin-bottom: 3%;
 }
 .brands__img {
   width: 20%;
