--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ li {
   list-style-type: none;
   text-decoration: none;
 }
+
+@media all and (max-width: 570px) {
+  * {
+    font-size: 12px;
+  }
+}
