--- a/src/components/home/MenCategories/MenCategoriesAdaptive.css
+++ b/src/components/home/MenCategories/MenCategoriesAdaptive.css
@@ -3,6 +3,9 @@
     flex-wrap: wrap;
     flex-direction: column;
   }
+  .menctgrs__item {
+    width: auto;
+  }
 }
 
 @media all and (max-width: 390px) {
